# tele-gpt

./: .env.example  Cargo.toml  log4rs.yml  readme.md
src/: gpt.rs  main.rs  telegram.rs
