[package]
name = "teleGPT"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
reqwest = "0.11.16"
teloxide = "0.12.2"
tokio = { version = "1.27.0", features = ["full"] }
tokio-stream = "0.1"
pretty_env_logger = "0.4"
log = "0.4"
futures-util = "0.3"
log4rs = "1.0.0"