[package]
name = "tele_gpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
reqwest = { version = "0.11.16", features = ["json", "stream"] }
teloxide = "0.12.2"
tokio = { version = "1.27.0", features = ["full"] }
tokio-stream = "0.1"
pretty_env_logger = "0.4"
log = "0.4"
futures-util = "0.3"
log4rs = "1.0.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
bytes = "1.4.0"
